# seleto-industrial

./: .dockerignore  .env.example  .gitignore  .mcp.json  =1.0.0  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fly.toml  fly.toml.example  pyproject.toml  requirements.txt
.claude/: settings.local.json
.cursor/commands/: ai-coders.md  chat-response.md  context7.md  correction-plan.md  create-plan.md  explain-the-error.md  implemente-as-tarefas.md  nothing.md  supabase-mcp.md  valide-tarefas.md
.dev/learning/: items.md
admin-panel/: .dockerignore  .env.example  .env.local.example  .gitignore  Dockerfile  README.md  fly.toml  package-lock.json  package.json  playwright.config.ts
admin-panel/e2e/: agent-control.spec.ts  auth.spec.ts  business-hours.spec.ts  global-setup.ts  leads.spec.ts  status.spec.ts
admin-panel/scripts/: deploy.sh
admin-panel/src/: proxy.ts
config/: .gitkeep  business_hours.yaml
docs/: README.md  agente-sdr.md  api.md  arquitetura.md  banco-de-dados.md  deploy.md  estrutura-pastas.md  glossario.md  integracoes.md  seguranca.md  servicos.md  testes.md  troubleshooting.md  variaveis-ambiente.md
docs-web/: app.js  content.js  index.html  styles.css
documentation/: MCP - SELETO.json  PRD.md  TESTES.md  TESTING_GUIDE.md  backlog.md  manual-chatwoot-sdr.md  plano_desenvolvimento.md  requirements_analysis.md  resume.md
documentation/bugs/: BUG-001-chatwoot-contact-search-response.md  BUG-002-chatwoot-sdr-message-not-sent-to-whatsapp.md  BUG-003-chatwoot-webhook-feedback-loop.md
documentation/lgpd/: mapeamento-dados-pessoais.md  processos-lgpd.md
documentation/runbooks/: README.md  atualizar-base-conhecimento.md  operacoes-pendentes.md  pausar-retomar-agente.md  reprocessar-mensagens.md  rotacionar-credenciais.md  solicitacoes-lgpd.md  verificar-saude-sistema.md
migrations/: 001_create_audit_logs_table.sql  20260106_create_pending_operations.sql
prompts/equipamentos/: prompt_manus.txt  resumo_maquinas.txt
prompts/frases_prontas/: frases_prontas.txt
prompts/system_prompt/: sp_agente_v1.xml  sp_calcula_temperatura.xml
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_integration_flow.py
(+121 files in other folders)
